Adjusted widths and height to display correctly on mobile. Removed logo from menu and replaced with Top

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
   text-align: center;
   background-color: var(--light-color-1);
-  min-width: 400px;
+  /* min-width: 300px; */
 }
+
+/* @media only screen and (max-width: 500px){
+  .App{
+    min-width: unset;
+  }
+} */
+
+
