--- a/src/modules/BodySection/BodySection.css
+++ b/src/modules/BodySection/BodySection.css
@@ -15,3 +15,9 @@
     width: 70%;
     margin: auto;
 }
+
+/* @media screen and (max-width: 500px){
+    .bodySection{
+        width: 100vw;
+    }
+} */
