--- a/src/modules/Footer/Footer.css
+++ b/src/modules/Footer/Footer.css
@@ -1,11 +1,12 @@
 .footer {
     width: 100%;
-    height: 75px;
+    min-width: 300px;
+    /* height: 75px; */
     background-color: var(--light-color-1);
     position: fixed;
     bottom: 0px;
-    display: flex;
-    align-items: center;
+    /* display: flex;
+    align-items: center; */
 }
 
 .borderDivFooter{
@@ -20,4 +21,11 @@
     color: var(--dark-color-1);
     margin: 10px;
     /* background-color: tomato; */
+}
+
+@media screen and (max-width: 500px){
+    .footer{
+        height: 55px;
+    }
+    
 }
