--- a/src/modules/TopSection/TopSection.css
+++ b/src/modules/TopSection/TopSection.css
@@ -18,5 +18,9 @@
     padding: 20px 0px 40px 0px;
 }
 
-
+/* @media screen and (max-width: 500px){
+    .topSection{
+        width: 100vw;
+    }
+} */
 
